<resources>
    <string name="app_name">NotifyMeRight</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add Task</string>

    <string name="title_task">New Calendar Task</string>
    <string name="field_name">Title</string>
    <string name="field_date">Date</string>
    <string name="field_time">Time</string>
    <string name="field_submit">Submit</string>
    <string name="field_repeat">Repeat Interval</string>
    <string-array name="options_repeat">
        <item>Every Day</item>
        <item>Every Week</item>
        <item>Every Fortnight</item>
        <item>Every Month</item>
    </string-array>
    <string name="drawer_open">Open Nav Drawer</string>
    <string name="drawer_close">Close Nav Drawer</string>
    <string-array name="navigation_drawer_items_array">
        <item>Geospatial Analytics</item>
        <item>Graph Analytics</item>
    </string-array>
</resources>
