<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10">
        <LinearLayout
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_name"
                android:textSize="22sp"
                android:fontFamily="sans-serif"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="24sp"
                android:fontFamily="sans-serif"
                android:id="@+id/etTitle"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_date"
                android:textSize="22sp"
                android:fontFamily="sans-serif"/>
            <DatePicker
                android:layout_width="match_parent"
                android:id="@+id/cvDate"
                android:layout_height="250dp"></DatePicker>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_time"
                android:textSize="22sp"
                android:fontFamily="sans-serif"/>
            <TimePicker 
                android:layout_width="match_parent" android:id="@+id/tpTime"
                android:layout_height="250dp"></TimePicker>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/field_repeat"
                android:textSize="22sp"
                android:fontFamily="sans-serif"/>


            <Spinner
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spPattern"
                android:layout_weight="10"
                android:entries="@array/options_repeat"/>
            </LinearLayout>
    </ScrollView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field_submit"
        android:id="@+id/btnSubmit"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
